@@ -10,7 +10,7 @@ DVB_DEMUX="0"     #
 NEW_LAMEDB="4"    #
 ###################
 
-versiondate="10 May 2023"
+versiondate="20 July 2023"
 echo "Script Version: $versiondate"
 start_time=`date +%s`
 date; echo
